# dev_ls

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  diff  ft_ls  ft_ls2  my_ls  output1  output2  outputerr1  outputerr2  true_ls
includes/: ft_ls.h
ls_test_cmd/: ls_test_cmd  main.c  output
ls_test_cmd/error_dir/: lol
ls_test_cmd/link/: l2  z
src/: ls_clear_memory.c  ls_cmp.c  ls_debug.c  ls_debug.txt  ls_error.c  ls_foreach_entity.c  ls_foreach_param.c  ls_get_data.c  ls_option.c  ls_print_child.c  ls_print_folder.c  ls_print_result.c  ls_set_data.c  ls_sort.c  ls_stack_opt_r.c  ls_util_dir.c  main.c
src/option_l/: ls_mode.c  ls_option_l.c  ls_set_option_l.c  ls_set_option_l_2.c  ls_util_l.c
srcs/: ls_debug.c  ls_dir.c  ls_error.c  ls_get_data.c  ls_get_user_group.c  ls_group.c  ls_option.c  ls_parse_option.c  ls_print_folder.c  ls_print_result.c  ls_set_data.c  ls_sort.c  ls_stat.c  ls_user.c  ls_util_dir.c  ls_way.c  main.c
srcs/option_l/: ls_mode.c  ls_option_l.c  ls_print2_l.c  ls_print_l.c  ls_set_option_l.c  ls_set_option_l_2.c  ls_util_l.c
test/: 1  2
test_ls/: test2
